force-app/main/default/objects/Apttus__WizardInputControlRuntime__c/Apttus__WizardInputControlRuntime__c.object-meta.xml
<CustomObject>
    <description>Input Control instance within a runtime wizard</description>
    <label>Wizard Input Control Runtime(Deprecated)</label>
    <nameField>
        <label>Wizard Input Control Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Input Control Runtime</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>