force-app/main/default/objects/Apttus__WizardInputControlRuntime__c/fields/Apttus__InputRepeatSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InputRepeatSequence__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Input Repeat Sequence</description>
    <inlineHelpText>Input Repeat Sequence</inlineHelpText>
    <label>Input Repeat Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>