force-app/main/default/objects/Apttus__WizardInputControlRuntime__c/fields/Apttus__ResponseValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ResponseValue__c</fullName>
    <description>Response Value that the user entered during runtime.</description>
    <inlineHelpText>Response Value that the user entered during runtime.</inlineHelpText>
    <label>Response Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>