force-app/main/default/objects/Apttus__WizardInputControlRuntime__c/fields/Apttus__WizardInputControlId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardInputControlId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the design input control</description>
    <inlineHelpText>Lookup to the design input control</inlineHelpText>
    <label>Wizard Input Control</label>
    <referenceTo>Apttus__WizardInputControl__c</referenceTo>
    <relationshipName>Wizard_Input_Control_Runtime1</relationshipName>
    <type>Lookup</type>
</CustomField>