force-app/main/default/objects/Apttus__WizardInputControlRuntime__c/fields/Apttus__WizardStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the wizard step</description>
    <inlineHelpText>Lookup to the wizard step</inlineHelpText>
    <label>Wizard Step</label>
    <referenceTo>Apttus__WizardStep__c</referenceTo>
    <relationshipName>Wizard_Input_Control_Runtime1</relationshipName>
    <type>Lookup</type>
</CustomField>