force-app/main/default/objects/Apttus__WizardInputControlRuntime__c/fields/Apttus__WizardStepRuntimeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepRuntimeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the step runtime</description>
    <inlineHelpText>Lookup to the step runtime</inlineHelpText>
    <label>Wizard Step Runtime</label>
    <referenceTo>Apttus__WizardStepRuntime__c</referenceTo>
    <relationshipName>Wizard_Input_Control_Runtime1</relationshipName>
    <type>Lookup</type>
</CustomField>